fix(textfield): overflow handling [ZCWA-2839]
Approved-by: Heinz Hölzer <heinz.hoelzer@db-n.com>

--- a/source/style/06-components/textfields.scss
+++ b/source/style/06-components/textfields.scss
@@ -147,6 +147,12 @@
     }
   }
 
+  &.has-icon .olt-textfield__input {
+    padding-right: 28px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &--no-border-bottom {
     .olt-textfield__input {
       border-bottom: none;
